# balatrobot

./: .gitignore  .mdformat.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  balatro.py  balatrobot.json  balatrobot.lua  bot.py  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: code_quality.yml  commit_lint.yml
docs/: api.md  balatro-ai.md  cli.md  contributing.md  example-bot.md  index.md  installation.md
scripts/: balatro-linux.py  balatro-macos.py  balatro-windows.py
src/balatro_ai/: __init__.py  __main__.py  actions.py  analyze.py  asha_tune.py  autotune.py  benchmark.py  bot.py  build_intent.py  cards.py  client.py  config.py  content_keys.py  decision_log.py  determinism.py  gs.py  hand_stats.py  intent_manager.py  intent_utils.py  joker_order.py  joker_rules.py  learn.py  logging_utils.py  odds.py  pacing.py  pack_policy.py  pack_rollout.py  pack_sim.py  poker_eval.py  policy.py  policy_context.py  replay_viewer.py  repro_check.py  rollout.py  rpc.py  runner.py  shop_policy.py  shop_rollout.py  supervise.py  token_utils.py  (+1 more)
src/balatrobot/: __init__.py  cli.py  config.py  health.py  manager.py  paths.py
src/lua/: settings.lua
tests/: conftest.py  test_joker_order.py  test_logging_utils.py  test_pack_sim.py  test_shop_policy.py
tests/balatro_ai/: test_asha_helpers.py  test_autotune_flags.py  test_baseline_json.py  test_bot_params_auto.py  test_bot_params_json.py  test_hand_selection.py  test_intent_manager.py  test_joker_rule_inference.py  test_learn_auto.py  test_learn_matrix.py  test_objectives.py  test_shop_policy_tuning.py
tests/cli/: test_platforms.py  test_policy.py
tests/fixtures/: README.md  fixtures.json  fixtures.schema.json  generate.py
tests/lua/: conftest.py  test_connection.py  test_protocol.py
(+71 files in other folders)
